# nvplayground

./: CMakeLists.txt  LICENSE  README.md
assets/: drawrect.nvp  incompatible.nvp  nvplay.ini  shutdown.nvp  shutdown_pgraph_only.nvp  test.nvp
config/: config.c  config.h
docs/: 0.4_temp.txt  TestIdeas.txt  releasenotes.txt
src/: main.c  main_help.c  nvplay.h  nvplayground.h
src/architecture/cirrus/: alpine.h  alpine_core.c
src/architecture/generic/: nv_generic.h  nv_generic_hal.c  nv_generic_tests.c  nvrm_class_names.c
src/architecture/nv1/: nv1.h  nv1_core.c  nv1_ref.h
src/architecture/nv10/: nv10.h  nv10_core.c
src/architecture/nv3/: nv3.h  nv3_api.h  nv3_class_names.c  nv3_core.c  nv3_mode_table.c  nv3_ref.h  nv3_state.h
src/architecture/nv3/driver/2d/: nv3_driver.h  nv3_driver_main.c
src/architecture/nv3/tests/: nv3_tests.c
src/architecture/nv4/: nv4.h  nv4_core.c  nv4_ref.h
src/architecture/nvidia/generic/: nv_generic_hal.c  nv_generic_tests.c  nvrm_class_names.c
src/architecture/nvidia/kernel/: kernel.h  nv_generic.h  nv_generic_hal.c  nv_generic_tests.c  nvrm_class_names.c
src/architecture/nvidia/kernel/core/: kernel.c
src/architecture/nvidia/kernel/fifo/: fifo.c
src/architecture/nvidia/kernel/graph/: graph.c
src/architecture/nvidia/nv1/: nv1_class_names.c  nv1_core.c  nv1_ref.h
src/architecture/nvidia/nv10/: nv10_core.c
src/architecture/nvidia/nv3/: nv3_class_names.c  nv3_core.c  nv3_mode_table.c  nv3_ref.h
src/architecture/nvidia/nv3/tests/: nv3_tests.c
src/architecture/nvidia/nv4/: nv4.h  nv4_core.c  nv4_fifo.c  nv4_graph.c  nv4_intr.c  nv4_ref.h
src/architecture/virge/: virge.h  virge_core.c
src/cmake/: VersionInfo.cmake  nvplay_version.h
src/config/: config.c  config.h
src/core/: core_cmdline.c  core_detect.c  gpu_detect.c  gpu_io.c  gpu_list.c  gpu_repl.c  nvcore.h  nvcore_detect.c  nvcore_io.c
src/core/console/: console.h  console_core.c  console_input.c
src/core/formats/: format_gpus.c  format_gpus_device_ids.h
src/core/gpu/: gpu.h  gpu_io.c  gpu_list.c  gpu_repl.c  gpu_repl.h  gpu_repl_messages.c
src/core/pci/: pci.c  pci.h
src/core/script/: gpu_script_commands.c  gpu_script_help.c  gpu_script_parser.c  script.h  script_commands.c  script_parser.c
src/core/tests/: tests.c  tests.h
src/driver/2d/: nv3_driver.h  nv3_driver_main.c
src/util/: ini.c  ini.h  util.h  util_cmdline.c  util_ini.c  util_ini.h  util_input_keyboard.c  util_logging.c  util_scancodes.h  util_string.c
src/util/console/: console.h  console_core.c  console_input.c
